Fix overflow

--- a/docs/.vuepress/docs.styl
+++ b/docs/.vuepress/docs.styl
@@ -6,8 +6,8 @@ $content-class = '.custom'
 
 // Style example container
 .custom
+  clearfix()
   margin: 0.85rem 0;
-  overflow hidden
 
 // Example background pattern
 .example-pattern
